# sqlitecpp_plugin

./: .gitmodules  CMakeLists.txt  README.md
include/: SqliteCpp.hpp  SqliteCppFactory.hpp  SqliteCppPlugin.hpp
src/: SqliteCpp.cpp  SqliteCppFactory.cpp  SqliteCppPlugin.cpp
